[gd_scene load_steps=5 format=3 uid="uid://c06ojs362t4up"]

[ext_resource type="Script" path="res://Scripts/Field/GameControll.gd" id="1_imivl"]
[ext_resource type="PackedScene" uid="uid://clqvfv0j573o" path="res://Scenes/playerBody.tscn" id="2_2n1n4"]
[ext_resource type="Texture2D" uid="uid://dqhu3pag3xim0" path="res://Media/BackGround.png" id="3_whbx1"]
[ext_resource type="Script" path="res://Scenes/Markers.gd" id="4_kibcx"]

[node name="Game" type="Node2D"]
script = ExtResource("1_imivl")

[node name="Button" type="Button" parent="."]
offset_left = 22.0
offset_top = 48.0
offset_right = 326.0
offset_bottom = 152.0
text = "Free porn
"
icon_alignment = 1

[node name="PlayerBody" parent="." instance=ExtResource("2_2n1n4")]
light_mask = 3
visibility_layer = 3
z_index = 3
position = Vector2(440, 616)

[node name="DiceDrop" type="Button" parent="."]
z_index = 5
offset_left = 1193.0
offset_top = 443.0
offset_right = 1267.0
offset_bottom = 487.0
text = "Бросок"

[node name="Dice_1" type="Label" parent="."]
z_index = 1
z_as_relative = false
offset_left = 1175.0
offset_top = 420.0
offset_right = 1215.0
offset_bottom = 443.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dice_2" type="Label" parent="."]
z_index = 1
z_as_relative = false
offset_left = 1242.0
offset_top = 420.0
offset_right = 1282.0
offset_bottom = 443.0
text = "6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackGround" type="Sprite2D" parent="."]
position = Vector2(761, 435)
scale = Vector2(0.4, 0.416)
texture = ExtResource("3_whbx1")
flip_h = true
flip_v = true

[node name="Markers" type="Node" parent="."]
script = ExtResource("4_kibcx")

[node name="M1" type="Marker2D" parent="Markers"]
position = Vector2(414, 74)

[node name="M2" type="Marker2D" parent="Markers"]
position = Vector2(500, 74)

[node name="M3" type="Marker2D" parent="Markers"]
position = Vector2(566, 74)

[node name="M4" type="Marker2D" parent="Markers"]
position = Vector2(630, 74)

[node name="M5" type="Marker2D" parent="Markers"]
position = Vector2(696, 74)

[node name="M6" type="Marker2D" parent="Markers"]
position = Vector2(760, 74)

[node name="M7" type="Marker2D" parent="Markers"]
position = Vector2(827, 74)

[node name="M8" type="Marker2D" parent="Markers"]
position = Vector2(892, 74)

[node name="M9" type="Marker2D" parent="Markers"]
position = Vector2(957, 74)

[node name="M10" type="Marker2D" parent="Markers"]
position = Vector2(1023, 74)

[node name="M11" type="Marker2D" parent="Markers"]
position = Vector2(1107, 74)

[node name="M12" type="Marker2D" parent="Markers"]
position = Vector2(1107, 164)

[node name="M13" type="Marker2D" parent="Markers"]
position = Vector2(1107, 232)

[node name="M14" type="Marker2D" parent="Markers"]
position = Vector2(1107, 300)

[node name="M15" type="Marker2D" parent="Markers"]
position = Vector2(1107, 368)

[node name="M16" type="Marker2D" parent="Markers"]
position = Vector2(1107, 435)

[node name="M17" type="Marker2D" parent="Markers"]
position = Vector2(1107, 503)

[node name="M18" type="Marker2D" parent="Markers"]
position = Vector2(1107, 571)

[node name="M19" type="Marker2D" parent="Markers"]
position = Vector2(1107, 639)

[node name="M20" type="Marker2D" parent="Markers"]
position = Vector2(1107, 707)

[node name="M21" type="Marker2D" parent="Markers"]
position = Vector2(1107, 795)

[node name="M22" type="Marker2D" parent="Markers"]
position = Vector2(1021, 795)

[node name="M23" type="Marker2D" parent="Markers"]
position = Vector2(955, 795)

[node name="M24" type="Marker2D" parent="Markers"]
position = Vector2(890, 795)

[node name="M25" type="Marker2D" parent="Markers"]
position = Vector2(825, 795)

[node name="M26" type="Marker2D" parent="Markers"]
position = Vector2(759, 795)

[node name="M27" type="Marker2D" parent="Markers"]
position = Vector2(694, 795)

[node name="M28" type="Marker2D" parent="Markers"]
position = Vector2(629, 794)

[node name="M29" type="Marker2D" parent="Markers"]
position = Vector2(564, 795)

[node name="M30" type="Marker2D" parent="Markers"]
position = Vector2(499, 795)

[node name="M31" type="Marker2D" parent="Markers"]
position = Vector2(414, 795)

[node name="M32" type="Marker2D" parent="Markers"]
position = Vector2(414, 705)

[node name="M33" type="Marker2D" parent="Markers"]
position = Vector2(414, 637)

[node name="M34" type="Marker2D" parent="Markers"]
position = Vector2(414, 569)

[node name="M35" type="Marker2D" parent="Markers"]
position = Vector2(414, 501)

[node name="M36" type="Marker2D" parent="Markers"]
position = Vector2(414, 433)

[node name="M37" type="Marker2D" parent="Markers"]
position = Vector2(414, 366)

[node name="M38" type="Marker2D" parent="Markers"]
position = Vector2(414, 298)

[node name="M39" type="Marker2D" parent="Markers"]
position = Vector2(414, 230)

[node name="M40" type="Marker2D" parent="Markers"]
position = Vector2(414, 162)

[node name="Money" type="Label" parent="."]
offset_left = 1308.0
offset_top = 84.0
offset_right = 1434.0
offset_bottom = 139.0
theme_override_font_sizes/font_size = 40
text = "6666"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="DiceDrop" to="." method="_on_dice_drop_pressed"]
